- Mouse settings simplification; - comment tweaking.

--- a/tmux.conf
+++ b/tmux.conf
@@ -78,9 +78,6 @@ bind-key -n 'C-Right' run-shell "(tmux display-message -p '#{pane_current_comman
 bind-key -n 'C-Left'  run-shell "(tmux display-message -p '#{pane_current_command}' | grep -iq vim) && tmux send-keys 'C-Left' || tmux select-pane -L"
 bind-key -n 'C-\'     run-shell "(tmux display-message -p '#{pane_current_command}' | grep -iq vim) && tmux send-keys 'C-\\'   || tmux select-pane -l || :"
 
-# Set the default working directory for new panes
-#set-option -g default-path ${HOME}
-
 # Status bar
 set-option -g status-position bottom
 set-option -g status-left-length  80
@@ -91,46 +88,12 @@ set-option -g status-right '#T'
 # Mouse suport
 set-option -g mouse on
 
-# Left click on statusbar for windows sequence adjustment
+# Drag on statusbar for windows sequence adjustment
 bind-key -n 'MouseDrag1Status' swap-window -t=
 
-# Enter copy-mode
-bind-key -n 'DoubleClick1Pane' \
-    copy-mode \; \
-    send-keys -X select-word \; \
-    send-keys -X copy-pipe-no-clear "xclip -i -selection primary"
-
-# Copy selected text in clipboard
+# Do not exit copy mode after dragging
 bind-key -T copy-mode-vi 'MouseDragEnd1Pane' \
-    send-keys -X copy-pipe-no-clear "xclip -i -selection primary"
-
-bind-key -T copy-mode-vi 'DoubleClick1Pane' \
-    select-pane \; \
-    send-keys -X select-word \; \
-    send-keys -X copy-pipe-no-clear "xclip -i -selection primary"
-
-bind-key -T copy-mode-vi 'TripleClick1Pane' \
-    select-pane \; \
-    send-keys -X select-line \; \
-    send-keys -X copy-pipe-no-clear "xclip -i -selection primary"
-
-# Past selected text from clipboard
-bind-key -T copy-mode-vi 'MouseDown2Pane' \
-    select-pane \; \
-    run-shell "tmux set-buffer \"$(xclip -o -selection primary)\"" \; \
-    paste-buffer \; \
-    send-keys -X cancel
-
-bind-key -n 'MouseDown2Pane' \
-    select-pane \; \
-    run-shell "tmux set-buffer \"$(xclip -o -selection primary)\"" \; \
-    paste-buffer \; \
-    send-keys -X cancel
-
-# Usual text selections with mouse in copy-mode
-# bind-key -T copy-mode-vi 'MouseDown1Pane' \
-#         select-pane \; \
-#         send-keys -X clear-selection
+    send-keys -X copy-no-clear
 
 # - Correct the 'colors' entry for terminals which support 88/256 colors;
 # - allow xterm titles in terminal window (XT);
