--- a/tmux.conf
+++ b/tmux.conf
@@ -42,15 +42,27 @@ set-option -g history-limit 15360
 
 # Use vi key bindings in copy and choice modes
 set-window-option -g mode-keys vi
+
 bind-key 'Escape' copy-mode
-bind-key -T copy-mode-vi 'Escape' send-keys -X copy-pipe-and-cancel "xclip -i -selection primary"
-bind-key -T copy-mode-vi 'Enter'  send-keys -X copy-pipe-and-cancel "xclip -i -selection primary"
-bind-key -T copy-mode-vi 'v'      send-keys -X begin-selection
-bind-key -T copy-mode-vi 'r'      send-keys -X rectangle-toggle
-bind-key -T copy-mode-vi 'y'      send-keys -X copy-pipe-and-cancel "xclip -i -selection primary"
+
+bind-key -T copy-mode-vi 'Escape' \
+    send-keys -X copy-pipe-and-cancel "xclip -i -selection primary"
+
+bind-key -T copy-mode-vi 'Enter' \
+    send-keys -X copy-pipe-and-cancel "xclip -i -selection primary"
+
+bind-key -T copy-mode-vi 'v' \
+    send-keys -X begin-selection
+
+bind-key -T copy-mode-vi 'r' \
+    send-keys -X rectangle-toggle
+
+bind-key -T copy-mode-vi 'y' \
+    send-keys -X copy-pipe-and-cancel "xclip -i -selection primary"
+
 bind-key 'p' \
-        run-shell "tmux set-buffer \"$(xclip -o -selection primary)\"" \; \
-        paste-buffer
+    run-shell "tmux set-buffer \"$(xclip -o -selection primary)\"" \; \
+    paste-buffer
 
 # Window selection
 bind-key -n 'C-Tab' select-window -t :+1
@@ -91,19 +103,36 @@ set-option -g mouse on
 # Drag on statusbar for windows sequence adjustment
 bind-key -n 'MouseDrag1Status' swap-window -t=
 
-# Do not exit copy mode after dragging
-bind-key -T copy-mode-vi 'MouseDragEnd1Pane' \
-    send-keys -X copy-no-clear
+# Copy/paste with keyboard and mouse
+bind-key -T copy-mode-vi 'y' \
+    send-keys -X copy-pipe-and-cancel 'xclip -i -selection primary'
+
+bind-key -T copy-mode-vi MouseDragEnd1Pane \
+    send-keys -X copy-pipe-no-clear 'xclip -i -selection primary'
+
+bind-key -T copy-mode-vi DoubleClick1Pane \
+    send-keys -X select-word \; \
+    send-keys -X copy-pipe-no-clear 'xclip -i -selection primary'
+
+bind-key -T copy-mode-vi TripleClick1Pane \
+    send-keys -X select-line \; \
+    send-keys -X copy-pipe-no-clear 'xclip -i -selection primary'
+
+bind-key -n MouseDown2Pane run \
+  'tmux set-buffer "$(xclip -o -selection primary)"; tmux paste-buffer'
 
 # - Correct the 'colors' entry for terminals which support 88/256 colors;
 # - allow xterm titles in terminal window (XT);
 # - disable acs support for OpenBSD VT.
 # Note: to disable scroll lock on terminal's alternate screen buffer: smcup@:rmcup@;
 # this gives minimal mouse support for scrolling and works just in a few cases
-set-option -g terminal-overrides '*88col*:colors=88,*256col*:colors=256,xterm*:colors=256:XT,wsvt*:enacs@:smacs@:rmacs@:acsc@'
+set-option -g terminal-overrides \
+    '*88col*:colors=88,*256col*:colors=256,xterm*:colors=256:XT,wsvt*:enacs@:smacs@:rmacs@:acsc@'
 
 # Synchronize panes
-bind-key 'C-s' set-window-option synchronize-panes \; display-message "Switching synchronize-panes mode..."
+bind-key 'C-s' \
+    set-window-option synchronize-panes \; \
+    display-message "Switching synchronize-panes mode..."
 
 # Bind some very common key sequences in ksh
 # Note: vi editing mode is assumed here...
