Layout management optimization

--- a/tmux.conf
+++ b/tmux.conf
@@ -70,8 +70,9 @@ bind-key -n 'C-.'   select-window -t :+1
 bind-key -n 'C-,'   select-window -t :-1
 
 # Panes layout
-bind-key 'h'   select-layout main-horizontal
-bind-key 'v'   select-layout main-vertical
+bind-key 'v'   run-shell "tmux-tile -v"
+bind-key 'h'   run-shell "tmux-tile -o"
+bind-key 't'   select-layout tiled
 bind-key 'C-h' select-layout even-horizontal
 bind-key 'C-v' select-layout even-vertical
 bind-key -n 'C-PageUp' resize-pane -Z
