Modified time tmux waits after Esc is input to determine if it is part of a function or meta key

--- a/tmux.conf
+++ b/tmux.conf
@@ -40,6 +40,10 @@ bind-key   '\' split-window -h
 # Set the maximum number of lines held in window history
 set-option -g history-limit 15360
 
+# Time (in ms) tmux waits after Esc is input to determine if it is part
+# of a function or meta key
+set-option -g escape-time 50
+
 # Use vi key bindings in copy and choice modes
 set-window-option -g mode-keys vi
 
