- Enable cache; - Force stereo over 5.1.

--- a/mpv.conf
+++ b/mpv.conf
@@ -3,3 +3,11 @@ volume-max=200
 
 # Number of threads to use for decoding
 vd-lavc-threads=4
+
+# Enable cache
+cache=yes
+demuxer-max-bytes=200000KiB
+demuxer-readahead-secs=240
+
+# Force stereo over 5.1
+audio-channels=stereo
