Add local config file

--- a/tmux.conf
+++ b/tmux.conf
@@ -196,3 +196,6 @@ set-option -g display-panes-colour white
 
 # Clock
 set-window-option -g clock-mode-colour yellow
+
+# Local configuration file
+source-file -q ~/.tmux.conf.local
