tmux: move config files in a dedicated directory
While there, move plugins config in a separate file

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -198,21 +198,8 @@ set-option -g display-panes-colour white
 set-window-option -g clock-mode-colour yellow
 
 # Local configuration file
-source-file -q ~/.tmux.conf.local
+source-file -q ~/.tmux/tmux.conf.local
 
-
-# ----------------------------------------------------------------------
-# Plugins (keep this section at the very bottom of tmux.conf)
-#
-
-# Tmux Plugin Manager {
-        set -g @plugin 'tmux-plugins/tpm'
-# }
-
-# Extrakto {
-        set -g @plugin 'laktak/extrakto'
-        set -g @extrakto_split_direction 'v'
-# }
-
-run '~/.tmux/plugins/tpm/tpm'
+# Plugins
+source-file -q ~/.tmux/plugins.conf
 
