Set the default terminal to tmux (instead of screen)
While there, move local config file and plugins section before
colorscheme fixes.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -15,6 +15,10 @@ unbind-key C-b
 set-option -g prefix 'C-a'
 bind-key 'C-a' send-prefix
 
+# Set the default terminal to tmux (instead of screen), to enable italic
+# fonts etc.
+set-option -g default-terminal tmux-256color
+
 # Reload configuration file
 bind-key 'C-r' source-file ~/.tmux.conf \; display-message "Loading configuration file..."
 
@@ -166,9 +170,24 @@ bind-key -n 'Right' if-shell "[ \"#{pane_current_command}\" == ksh ] || \
 ' \
         send-keys Right'
 
+# Clock
+set-window-option -g clock-mode-colour yellow
+
 # ----------------------------------------------------------------------
-# Colorscheme
+# Local configuration file
 #
+source-file -q ~/.tmux/tmux.conf.local
+
+# ----------------------------------------------------------------------
+# Plugins
+#
+source-file -q ~/.tmux/plugins.conf
+
+# ----------------------------------------------------------------------
+# Colorscheme fixes
+#
+set-option -g allow-passthrough on
+source-file -q $HOME/.config/tinted-theming/tmux.base16.conf
 
 # Statusbar
 set-option -g status-style fg=black,bg=brightwhite,none
@@ -193,13 +212,4 @@ set-option -g message-style fg=black,bg=brightwhite,none
 # Pane number display
 set-option -g display-panes-active-colour brightred
 set-option -g display-panes-colour white
-
-# Clock
-set-window-option -g clock-mode-colour yellow
-
-# Local configuration file
-source-file -q ~/.tmux/tmux.conf.local
-
-# Plugins
-source-file -q ~/.tmux/plugins.conf
 
