Set focus-events option

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -173,6 +173,11 @@ bind-key -n 'Right' if-shell "[ \"#{pane_current_command}\" == ksh ] || \
 # Clock
 set-window-option -g clock-mode-colour yellow
 
+# Focus events are requested from the terminal and passed through to
+# applications running in tmux
+set-option -g focus-events on
+
+
 # ----------------------------------------------------------------------
 # Local configuration file
 #
