--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -10,17 +10,21 @@
 # an xterm: the session will remain active...)
 #set-option -g default-command "$SHELL"
 
+# ----------------------------------------------------------------------
 # Set command prefix
+#
 unbind-key C-b
 set-option -g prefix 'C-a'
 bind-key 'C-a' send-prefix
 
+
+# ----------------------------------------------------------------------
+# Global options
+#
+
 # Set the default terminal to tmux (instead of screen), to enable italic
 # fonts etc.
 set-option -g default-terminal tmux-256color
-
-# Reload configuration file
-bind-key 'C-r' source-file ~/.tmux.conf \; display-message "Loading configuration file..."
 
 # Set the client terminal title
 set-option -g set-titles on
@@ -33,14 +37,6 @@ set-window-option -g pane-base-index 1
 # Switch off automatic window renaming
 set-window-option -g automatic-rename off
 
-# Split window key bindings
-#unbind-key '"'
-bind-key   '-' split-window -v
-bind-key   '_' split-window -v
-#unbind-key '%'
-bind-key   '|' split-window -h
-bind-key   '\' split-window -h
-
 # Set the maximum number of lines held in window history
 set-option -g history-limit 15360
 
@@ -50,6 +46,44 @@ set-option -g escape-time 50
 
 # Use vi key bindings in copy and choice modes
 set-window-option -g mode-keys vi
+
+# Status bar
+set-option -g status-position bottom
+set-option -g status-left-length  80
+set-option -g status-right-length 80
+set-option -g status-left '[#S:#I.#P] '
+set-option -g status-right '#T'
+
+# Mouse suport
+set-option -g mouse on
+
+# - Correct the 'colors' entry for terminals which support 88/256 colors;
+# - allow xterm titles in terminal window (XT);
+# - disable acs support for OpenBSD VT.
+# Note: to disable scroll lock on terminal's alternate screen buffer: smcup@:rmcup@;
+# this gives minimal mouse support for scrolling and works just in a few cases
+set-option -g terminal-overrides \
+    '*88col*:colors=88,*256col*:colors=256,xterm*:colors=256:XT,wsvt*:enacs@:smacs@:rmacs@:acsc@'
+
+# Focus events are requested from the terminal and passed through to
+# applications running in tmux
+set-option -g focus-events on
+
+
+# ----------------------------------------------------------------------
+# Key bindings
+#
+
+# Reload configuration file
+bind-key 'C-r' source-file ~/.tmux.conf \; display-message "Loading configuration file..."
+
+# Split window key bindings
+#unbind-key '"'
+bind-key   '-' split-window -v
+bind-key   '_' split-window -v
+#unbind-key '%'
+bind-key   '|' split-window -h
+bind-key   '\' split-window -h
 
 bind-key 'Escape' copy-mode
 
@@ -99,16 +133,6 @@ bind-key -n 'C-Right' run-shell "(tmux display-message -p '#{pane_current_comman
 bind-key -n 'C-Left'  run-shell "(tmux display-message -p '#{pane_current_command}' | grep -iq vim) && tmux send-keys 'C-Left' || tmux select-pane -L"
 bind-key -n 'C-\'     run-shell "(tmux display-message -p '#{pane_current_command}' | grep -iq vim) && tmux send-keys 'C-\\'   || tmux select-pane -l || :"
 
-# Status bar
-set-option -g status-position bottom
-set-option -g status-left-length  80
-set-option -g status-right-length 80
-set-option -g status-left '[#S:#I.#P] '
-set-option -g status-right '#T'
-
-# Mouse suport
-set-option -g mouse on
-
 # Drag on statusbar for windows sequence adjustment
 bind-key -n 'MouseDrag1Status' swap-window -t=
 
@@ -128,15 +152,7 @@ bind-key -T copy-mode-vi TripleClick1Pane \
     send-keys -X copy-pipe-no-clear 'xclip -i -selection primary'
 
 bind-key -n MouseDown2Pane run \
-  'tmux set-buffer "$(xclip -o -selection primary)"; tmux paste-buffer'
-
-# - Correct the 'colors' entry for terminals which support 88/256 colors;
-# - allow xterm titles in terminal window (XT);
-# - disable acs support for OpenBSD VT.
-# Note: to disable scroll lock on terminal's alternate screen buffer: smcup@:rmcup@;
-# this gives minimal mouse support for scrolling and works just in a few cases
-set-option -g terminal-overrides \
-    '*88col*:colors=88,*256col*:colors=256,xterm*:colors=256:XT,wsvt*:enacs@:smacs@:rmacs@:acsc@'
+    'tmux set-buffer "$(xclip -o -selection primary)"; tmux paste-buffer'
 
 # Synchronize panes
 bind-key 'C-s' \
@@ -146,36 +162,29 @@ bind-key 'C-s' \
 # Bind some very common key sequences in ksh
 # Note: vi editing mode is assumed here...
 bind-key -n 'Up' if-shell "[ \"#{pane_current_command}\" == ksh ] || \
-                            [ \"#{pane_current_command}\" == sh ]" \
+                           [ \"#{pane_current_command}\" == sh ]" \
 ' \
         send-keys Escape k' \
 ' \
         send-keys Up'
 bind-key -n 'Down' if-shell "[ \"#{pane_current_command}\" == ksh ] || \
-                            [ \"#{pane_current_command}\" == sh ]" \
+                             [ \"#{pane_current_command}\" == sh ]" \
 ' \
         send-keys Escape j' \
 ' \
         send-keys Down'
 bind-key -n 'Left' if-shell "[ \"#{pane_current_command}\" == ksh ] || \
-                            [ \"#{pane_current_command}\" == sh ]" \
+                             [ \"#{pane_current_command}\" == sh ]" \
 ' \
         send-keys Escape h' \
 ' \
         send-keys Left'
 bind-key -n 'Right' if-shell "[ \"#{pane_current_command}\" == ksh ] || \
-                            [ \"#{pane_current_command}\" == sh ]" \
+                              [ \"#{pane_current_command}\" == sh ]" \
 ' \
         send-keys Escape l' \
 ' \
         send-keys Right'
-
-# Clock
-set-window-option -g clock-mode-colour yellow
-
-# Focus events are requested from the terminal and passed through to
-# applications running in tmux
-set-option -g focus-events on
 
 
 # ----------------------------------------------------------------------
@@ -217,4 +226,7 @@ set-option -g message-style fg=black,bg=brightwhite,none
 # Pane number display
 set-option -g display-panes-active-colour brightred
 set-option -g display-panes-colour white
+
+# Clock
+set-window-option -g clock-mode-colour yellow
 
