--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -134,7 +134,9 @@ bind-key -n 'C-Left'  run-shell "(tmux display-message -p '#{pane_current_comman
 bind-key -n 'C-\'     run-shell "(tmux display-message -p '#{pane_current_command}' | grep -iq vim) && tmux send-keys 'C-\\'   || tmux select-pane -l || :"
 
 # Drag on statusbar for windows sequence adjustment
-bind-key -n 'MouseDrag1Status' swap-window -t=
+bind -n MouseDown1Status selectw \; set -F @drag_window '#{window_id}'
+bind -n MouseDrag1Status run -C 'swapw -ds#{@drag_window}'
+bind -n MouseDragEnd1Status set -u @drag_window
 
 # Copy/paste with keyboard and mouse
 bind-key -T copy-mode-vi 'y' \
@@ -198,16 +200,19 @@ source-file -q ~/.tmux/tmux.conf.local
 source-file -q ~/.tmux/plugins.conf
 
 # ----------------------------------------------------------------------
-# Colorscheme fixes
+# Minimal colorscheme
 #
 set-option -g allow-passthrough on
-source-file -q $HOME/.config/tinted-theming/tmux.base16.conf
+#source-file -q $HOME/.config/tinted-theming/tmux.base16.conf
+
+# Enable true colors
+set -sg terminal-overrides ",*:RGB"
 
 # Statusbar
-set-option -g status-style fg=black,bg=brightwhite,none
+set-option -g status-style fg=black,bg=white,none
 
 # Active window title
-set-window-option -g window-status-current-style fg=red,bg=brightwhite,none
+set-window-option -g window-status-current-style fg=black,bg=magenta,none
 
 # Window with bell/activity title
 set-window-option -g window-status-activity-style fg=cyan,bg=default,none
@@ -218,13 +223,13 @@ set-window-option -g window-status-style fg=default,bg=default,none
 
 # Pane border
 set-option -g pane-border-style default
-set-option -g pane-active-border-style fg=brightred
+set-option -g pane-active-border-style fg=red
 
 # Message text
-set-option -g message-style fg=black,bg=brightwhite,none
+set-option -g message-style fg=black,bg=white,none
 
 # Pane number display
-set-option -g display-panes-active-colour brightred
+set-option -g display-panes-active-colour red
 set-option -g display-panes-colour white
 
 # Clock
