--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -47,13 +47,6 @@ set-option -g escape-time 50
 # Use vi key bindings in copy and choice modes
 set-window-option -g mode-keys vi
 
-# Status bar
-set-option -g status-position bottom
-set-option -g status-left-length  80
-set-option -g status-right-length 80
-set-option -g status-left '[#S:#I.#P] '
-set-option -g status-right '#T'
-
 # Mouse suport
 set-option -g mouse on
 
@@ -200,38 +193,27 @@ source-file -q ~/.tmux/tmux.conf.local
 source-file -q ~/.tmux/plugins.conf
 
 # ----------------------------------------------------------------------
-# Minimal colorscheme
+# Colorscheme & status line
 #
-set-option -g allow-passthrough on
-#source-file -q $HOME/.config/tinted-theming/tmux.base16.conf
 
 # Enable true colors
-set -sg terminal-overrides ",*:RGB"
+set-option -sg terminal-overrides ",*:RGB"
 
-# Statusbar
-set-option -g status-style fg=black,bg=white,none
+# Allow passthrough
+set-option -g allow-passthrough on
 
-# Active window title
-set-window-option -g window-status-current-style fg=black,bg=magenta,none
+# Status line
+set-option -g status-position bottom
+set-option -g status-left-length  100
+set-option -g status-right-length  80
 
-# Window with bell/activity title
-set-window-option -g window-status-activity-style fg=cyan,bg=default,none
-set-window-option -g window-status-bell-style fg=cyan,bg=default,none
+set-option -g @catppuccin_window_status_style "rounded"
+set-option -g @catppuccin_window_current_text " #W"
+set-option -g @catppuccin_window_text " #W"
 
-# Other windows title
-set-window-option -g window-status-style fg=default,bg=default,none
+#set-option -g status-left '[#S:#I.#P] '
+set-option -g status-left "#{E:@catppuccin_status_session}"
+set-option -g status-right 'Pane #I.#P: #T'
 
-# Pane border
-set-option -g pane-border-style default
-set-option -g pane-active-border-style fg=red
-
-# Message text
-set-option -g message-style fg=black,bg=white,none
-
-# Pane number display
-set-option -g display-panes-active-colour red
-set-option -g display-panes-colour white
-
-# Clock
-set-window-option -g clock-mode-colour yellow
+source ~/.catppuccin/catppuccin_tmux.conf
 
