--- a/tmux/plugins.conf
+++ b/tmux/plugins.conf
@@ -3,19 +3,30 @@
 #
 
 # Tmux Plugin Manager {
-        set -g @plugin 'tmux-plugins/tpm'
+    set -g @plugin 'tmux-plugins/tpm'
 # }
 
 # Extrakto {
         set -g @plugin 'laktak/extrakto'
-        set -g @extrakto_split_direction 'v'
-        set -g @extrakto_split_size '14'
+        set -g @extrakto_grab_area 'full'
+
+        #set -g @extrakto_split_direction 'v'
+        #set -g @extrakto_split_size '14'
+        #
+        set -g @extrakto_key 'f'
         set -g @extrakto_copy_key 'tab'
         set -g @extrakto_insert_key 'enter'
+
+        set -g @extrakto_editor 'vim'
 # }
+
+set -g @plugin 'sainnhe/tmux-fzf'
 
 run '~/.tmux/plugins/tpm/tpm'
 
-# Default `alt-u` is unusable on MacOS
-set -g @tpm-clean 'u'
+# Default `alt-u` is unusable on MacOS, so:
+# prefix + I: Install new plugins and refresh the environment
+# prefix + U: Update plugins
+# prefix + u: Uninstall plugins (no more in the plugin list)
+set-option -g @tpm-clean 'u'
 
