Status line refinements

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -207,12 +207,15 @@ set-option -g status-position bottom
 set-option -g status-left-length  100
 set-option -g status-right-length  80
 
-set-option -g @catppuccin_window_status_style "rounded"
+# basic, rounded, slanted, custom, or none
+set-option -g @catppuccin_window_status_style "basic"
+
 set-option -g @catppuccin_window_current_text " #W"
 set-option -g @catppuccin_window_text " #W"
 
 #set-option -g status-left '[#S:#I.#P] '
-set-option -g status-left "#{E:@catppuccin_status_session}"
+set-option -g @catppuccin_session_icon "S"
+set-option -g status-left "#{E:@catppuccin_status_session}  "
 set-option -g status-right 'Pane #I.#P: #T'
 
 source ~/.catppuccin/catppuccin_tmux.conf
