Remove all rounded separators from status line

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -214,7 +214,8 @@ set-option -g @catppuccin_window_current_text " #W"
 set-option -g @catppuccin_window_text " #W"
 
 #set-option -g status-left '[#S:#I.#P] '
-set-option -g @catppuccin_session_icon "S"
+set-option -g @catppuccin_session_icon " S "
+set-option -g @catppuccin_status_left_separator " "
 set-option -g status-left "#{E:@catppuccin_status_session}  "
 set-option -g status-right 'Pane #I.#P: #T'
 
